# weather_alert

./: .gitignore  Alert progress  (Repaired).docx  email_gen.ipynb  main.py  merged_events_email.json  new 2.txt  pyproject.toml
config/: settings.yaml
src/: alert_processing.py  config_loader.py  data_loader.py  data_processing.py  downloader.py  email_writer_agent.py  mian.py  utils.py
src/polygon/: forcast_region_canada_5.dbf  forcast_region_canada_5.sbn  forcast_region_canada_5.sbx  forcast_region_canada_5.shp  forcast_region_canada_5.shp.xml  forcast_region_canada_5.shx
