[project]
name = "weather-alert-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cfgrib>=0.9.15.1",
    "dotenv>=0.9.9",
    "folium>=0.20.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-deepseek>=1.0.1",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langgraph>=1.1.6",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pytz>=2026.1.post1",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "timezonefinder>=8.2.2",
    "xarray>=2026.2.0",
]
